WIP - created pages and styling
TODO: style gallery
TODO: add jobs and achievements list to works

--- a/views/Works.hbs
+++ b/views/Works.hbs
@@ -1,4 +1,4 @@
-<h2>Works</h2>
+<h2>His Works</h2>
 <p>
     Tyson’s work has focused on core issues in cosmology as well as a constellation of related fields such as stellar evolution, 
     galactic astronomy, bulges, and stellar formation. (the formation and evolution of stars, galaxies, and other phenomena such as bulges). 
