--- a/views/layout.hbs
+++ b/views/layout.hbs
@@ -27,14 +27,16 @@
         </nav>
         <hero>
             <img src="/images/black-hole-birth.jpeg" alt="" class="hero-img">
-            <div class="hero-txt-container">
-                <h1 class="hero-title"></h1>
-                <p class="hero-txt"></p>
+            <div class="hero-text-container">
+                <h1 class="hero-title">Neil deGrass Tyson</h1>
+                <p class="hero-description"></p>
             </div>
         </hero>
     </header>
-
-    {{{body}}}
-
+    <div class="content">
+        <section>
+            {{{body}}}
+        </section>
+    </div>
 </body>
 </html>
