--- a/public/css/main.css
+++ b/public/css/main.css
@@ -1,4 +1,4 @@
-header {
+body {
     background-color: var(--background-color-dark);
 }
 
@@ -56,4 +56,32 @@ header hero {
 header hero .hero-img {
     width: 100%;
     height: fit-content;
+}
+
+.hero-text-container {
+    display: flex;
+    position: absolute;
+    width: 100%;
+    height: 100%;
+    justify-content: center;
+    align-items: center;
+    color: white;
+    font-size: 3rem;
+}
+
+.hero-text-container h1 {
+    text-shadow: 0 0 5px black, 0 0 5px black, 0 0 4px black, 0 0 4px black;
+}
+
+.content {
+    margin: 0 calc(2rem + 12vw); 
+}
+
+section {
+    padding: 5rem 10rem;
+    background-color: white;
+}
+
+section h2 {
+    text-align: center;
 }
