--- a/views/Gallery.hbs
+++ b/views/Gallery.hbs
@@ -1,1 +1,11 @@
 <h2>Photo Gallery</h2>
+{{#each gallery}}
+<div class="image-container">
+    <img src="{{src}}" alt="{{alt}}" class="gallery-image">
+    {{#if legend}}
+    <div class="text-container">
+        <p class="legend"></p>
+    </div>
+    {{/if}}
+</div>
+{{/each}}
