--- a/views/Gallery.hbs
+++ b/views/Gallery.hbs
@@ -1,10 +1,10 @@
 <h2>Photo Gallery</h2>
 {{#each gallery}}
-<div class="image-container">
+<div class="gallery-image-container">
     <img src="{{src}}" alt="{{alt}}" class="gallery-image">
-    {{#if legend}}
+    {{#if alt}}
     <div class="text-container">
-        <p class="legend"></p>
+        <p class="legend">{{alt}}</p>
     </div>
     {{/if}}
 </div>
