add partial for article, used in works

--- a/views/Works.hbs
+++ b/views/Works.hbs
@@ -1,12 +1,9 @@
 <h2>His Works</h2>
 <p>
-    Tyson’s work has focused on core issues in cosmology as well as a constellation of related fields such as stellar evolution, 
-    galactic astronomy, bulges, and stellar formation. (the formation and evolution of stars, galaxies, and other phenomena such as bulges). 
-    Tyson is also well-known for his energetic and popular explanations and defenses of astronomy and science in particular, and has made many appearances in media over the years. 
-    In 1995 he started writing the “Universe” column for Natural History magazine. 
-    In 2001, U.S. President George W. Bush appointed Tyson to serve on the Commission on the Future of the United States Aerospace Industry. 
-    And in 2004 Tyson hosted the four-part Origins miniseries of the PBS Nova series. 
-    He has written many books on astronomy and physics, including Death by Black Hole: And Other Cosmic Quandaries, published in 2007. 
-    Tyson was voted in 2007 into the Time 100,  where the editors of Time magazine chose the 100 most influential persons in the world. 
-    He was elected a fellow of the American Physical Society in 2010.
+    Tyson's research has focused on observations in cosmology, stellar evolution, galactic astronomy, bulges, and stellar formation.
+    He has held numerous positions at institutions including the University of Maryland, Princeton University, the American Museum of Natural History, and the Hayden Planetarium.
 </p>
+
+{{#each articles}}
+    {{> article this}}
+{{/each}}
