--- a/public/css/main.css
+++ b/public/css/main.css
@@ -1,3 +1,8 @@
+* {
+    box-sizing: border-box;
+    padding: 0;
+    margin: 0;
+}
 body {
     background-color: var(--background-color-dark);
 }
@@ -49,13 +54,13 @@ header hero {
     display: flex;
     position: relative;
     height: 500px;
-    align-items: flex-start;
+    align-items: center;
+    overflow: hidden;
 }
 
 header hero .hero-img {
     width: 100%;
     height: fit-content;
-    -webkit-mask-image: -webkit-gradient(linear, left top, left bottom, from(rgba(0,0,0,1)), to(rgba(0,0,0,0)));
 }
 
 .hero-text-container {
@@ -73,18 +78,15 @@ header hero .hero-img {
     text-shadow: 0 0 5px black, 0 0 5px black, 0 0 4px black, 0 0 4px black;
 }
 
-.content {
-    margin: 0 calc(2rem + 12vw); 
-}
-
 section {
-    padding: 5rem 10rem;
+    padding: 5rem 4rem;
     font-size: 1.5rem;
     background-color: white;
 }
 
 section h2 {
     text-align: center;
+    padding: 2rem
 }
 
 .gallery-image-container {
@@ -100,4 +102,46 @@ section h2 {
 
 .gallery-image-container .text-container {
     text-align: right;
+}
+
+article {
+    padding: 2rem;
+    margin: 2rem 0;
+    display: flex;
+    flex-flow: row  wrap;
+    align-items: center;
+    box-shadow: rgba(60, 64, 67, 0.3) 0px 1px 2px 0px, rgba(60, 64, 67, 0.15) 0px 2px 6px 2px;
+}
+
+article h2 {
+    padding: 0 0 .5rem 0;
+}
+
+article h2+p {
+    margin-bottom: 1rem;
+}
+
+article .text-container {
+    width: 50%;
+    font-size: 1rem;
+    padding-right: 2rem;
+}
+
+article .article-date {
+    text-align: right;
+    padding-bottom: 1rem
+}
+
+article .text-container p {
+    padding: .5rem 0;
+}
+
+article .image-container {
+    width: 50%;
+    height: fit-content;
+}
+
+article .image-container img {
+    box-shadow: rgba(0, 0, 0, 0.4) 0px 2px 4px, rgba(0, 0, 0, 0.3) 0px 7px 13px -3px, rgba(0, 0, 0, 0.2) 0px -3px 0px inset;
+    max-width: 100%;
 }
