add styling to article partial

--- a/public/css/main.css
+++ b/public/css/main.css
@@ -89,6 +89,13 @@ section h2 {
     padding: 2rem
 }
 
+section .headline {
+    font-size: 1.2rem;
+    text-align: justify;
+    max-width: 51rem;
+    margin: 0 auto;
+}
+
 .gallery-image-container {
     width: 100%;
     margin: 2rem 0;
@@ -105,7 +112,7 @@ section h2 {
 }
 
 article {
-    padding: 2rem;
+    padding: 1rem 2rem 2rem;
     margin: 2rem 0;
     display: flex;
     flex-flow: row  wrap;
@@ -113,23 +120,28 @@ article {
     box-shadow: rgba(60, 64, 67, 0.3) 0px 1px 2px 0px, rgba(60, 64, 67, 0.15) 0px 2px 6px 2px;
 }
 
-article h2 {
-    padding: 0 0 .5rem 0;
-}
-
-article h2+p {
+article .heading {
+    width: 100%;
+    display: flex;
+    flex-flow: row wrap;
+    justify-content: space-between;
+    align-items: center;
     margin-bottom: 1rem;
+}
+article .heading h2 {
+    padding: 0;
+    text-align: left;
 }
 
 article .text-container {
     width: 50%;
     font-size: 1rem;
     padding-right: 2rem;
-}
-
-article .article-date {
-    text-align: right;
-    padding-bottom: 1rem
+    display: flex;
+    flex-direction: column;
+    justify-content: center;
+    text-align: justify;
+    align-self: stretch;
 }
 
 article .text-container p {
