--- a/views/Works.hbs
+++ b/views/Works.hbs
@@ -1,5 +1,5 @@
-<h2>His Works</h2>
-<p>
+<h2>Works</h2>
+<p class="headline">
     Tyson's research has focused on observations in cosmology, stellar evolution, galactic astronomy, bulges, and stellar formation.
     He has held numerous positions at institutions including the University of Maryland, Princeton University, the American Museum of Natural History, and the Hayden Planetarium.
 </p>
